--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,97 @@
-
-folium
-fpdf
-geocoder
-geopy
-gitpython
-googlemaps
-gunicorn
-h5py
-keras
-markdown
-matplotlib
-ml-dtypes
-numpy
-opencv-python
-pandas
-pillow
-protobuf
-pyarrow
-pydeck
-pyjwt
-python-dotenv
-requests
-scikit-learn
-seaborn
-streamlit
-tensorflow
-uvicorn
-streamlit-option-menu==0.3.13
+absl-py==2.1.0
+altair==5.4.1
+astunparse==1.6.3
+attrs==24.2.0
+blinker==1.8.2
+branca==0.8.0
+cachetools==5.5.0
+certifi==2024.8.30
+charset-normalizer==3.4.0
+click==8.1.7
+colorama==0.4.6
+contourpy==1.3.0
+cycler==0.12.1
+decorator==5.1.1
+flatbuffers==24.3.25
+folium==0.17.0
+fonttools==4.54.1
+fpdf==1.7.2
+future==1.0.0
+gast==0.6.0
+geocoder==1.38.1
+geographiclib==2.0
+geopy==2.4.1
+gitdb==4.0.11
+GitPython==3.1.43
+google-pasta==0.2.0
+googlemaps==4.10.0
+grpcio==1.66.2
+gunicorn==23.0.0
+h11==0.14.0
+h5py==3.12.1
+idna==3.10
+importlib_metadata==8.5.0
+importlib_resources==6.4.5
+Jinja2==3.1.4
+joblib==1.4.2
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+keras==3.6.0
+kiwisolver==1.4.7
+libclang==18.1.1
+Markdown==3.7
+markdown-it-py==3.0.0
+MarkupSafe==3.0.1
+matplotlib==3.9.2
+mdurl==0.1.2
+ml-dtypes==0.4.1
+namex==0.0.8
+narwhals==1.9.2
+numpy==1.26.4
+opencv-python==4.10.0.84
+opt_einsum==3.4.0
+optree==0.13.0
+packaging==24.1
+pandas==2.2.3
+pillow==10.4.0
+protobuf==4.25.5
+pyarrow==17.0.0
+pydeck==0.9.1
+Pygments==2.18.0
+PyJWT==2.9.0
+pyparsing==3.1.4
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+pytz==2024.2
+ratelim==0.1.6
+referencing==0.35.1
+requests==2.32.3
+rich==13.9.2
+rpds-py==0.20.0
+scikit-learn==1.5.2
+scipy==1.13.1
+seaborn==0.13.2
+six==1.16.0
+smmap==5.0.1
+streamlit==1.39.0
 streamlit-lottie==0.0.5
+streamlit-option-menu==0.3.13
+tenacity==9.0.0
+tensorboard==2.17.1
+tensorboard-data-server==0.7.2
+tensorflow==2.17.0
+tensorflow-intel==2.17.0
+tensorflow-io-gcs-filesystem==0.31.0
+termcolor==2.5.0
+threadpoolctl==3.5.0
+toml==0.10.2
+tornado==6.4.1
+typing_extensions==4.12.2
+tzdata==2024.2
+urllib3==2.2.3
+uvicorn==0.31.0
+watchdog==5.0.3
+Werkzeug==3.0.4
+wrapt==1.16.0
+xyzservices==2024.9.0
+zipp==3.20.2
