--- a/requirements.txt
+++ b/requirements.txt
@@ -79,11 +79,11 @@ streamlit-option-menu==0.3.13
 tenacity==9.0.0
 tensorboard==2.17.1
 tensorboard-data-server==0.7.2
-tensorflow==2.17.0
-tensorflow-intel==2.17.0
-tensorflow-io-gcs-filesystem==0.31.0
-termcolor==2.5.0
-threadpoolctl==3.5.0
+tensorflow
+tensorflow-intel
+tensorflow-io-gcs-filesystem
+termcolor
+threadpoolctl
 toml==0.10.2
 tornado==6.4.1
 typing_extensions==4.12.2
