--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+tensorrt
 absl-py==2.1.0
 altair==5.4.1
 astunparse==1.6.3
@@ -48,7 +49,8 @@ ml-dtypes==0.4.1
 namex==0.0.8
 narwhals==1.9.2
 numpy==1.26.4
-opencv-python==4.10.0.84
+opencv-python
+opencv-python-headless
 opt_einsum==3.4.0
 optree==0.13.0
 packaging==24.1
@@ -60,7 +62,6 @@ pydeck==0.9.1
 Pygments==2.18.0
 PyJWT==2.9.0
 pyparsing==3.1.4
-python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.2
 ratelim==0.1.6
